[tool.poetry]
name = "pytorch-vae"
version = "0.1.0"
description = ""
authors = ["onnga-wasabi <yuuto.onnga.23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
pillow = "^7.1.1"
six = "^1.14.0"
pyyaml = "^5.3.1"
tqdm = "^4.45.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
tensorboard = "^2.2.0"
wandb = "^0.9.3"
matplotlib = "^3.3.0"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
tensorboard = "^2.2.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

